🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,13 +33,13 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Sonny Gray is projected to whiff 7.1</h3>
-    <p>Sonny Gray faces Dodgers, who strike out 20.7% of the time.</p>
+    <h3>Sonny Gray racks up Ks today</h3>
+    <p>Sonny Gray is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Ben Rice has HR potential</h3>
-    <p>Ben Rice has hit 1 already and owns a 100.0% hard-hit rate vs Patrick Corbin.</p>
+    <h3>Lourdes Gurriel Jr. HR prop</h3>
+    <p>66.7% hard-hit rate vs JP Sears — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
@@ -48,13 +48,13 @@
 </div>
 
 <div class="prop-card">
-    <h3>baltimoreorioles vs philadelphiaphillies NRFI Pick</h3>
+    <h3>NRFI: baltimoreorioles vs philadelphiaphillies</h3>
     <p>Low 1st-inning scoring profile with Jesus Luzardo and Cade Povich.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">San Francisco Giants@Pittsburgh Pirates could explode offensively</span></h3>
-    <p><span class="blurred">PNC Park is a run-friendly park — nan% chance of fireworks.</span></p>
+    <h3><span class="blurred">San Francisco Giants vs Pittsburgh Pirates — total runs over</span></h3>
+    <p><span class="blurred">nan% model chance of a high-scoring affair at PNC Park.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
