🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Sonny Gray racks up Ks today</h3>
-    <p>Sonny Gray is in a prime strikeout spot today.</p>
+    <h3>Nathan Eovaldi racks up Ks today</h3>
+    <p>Nathan Eovaldi is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Lourdes Gurriel Jr. HR prop</h3>
-    <p>66.7% hard-hit rate vs JP Sears — eyes on the fences.</p>
+    <h3>Mookie Betts HR prop</h3>
+    <p>33.3% hard-hit rate vs Miles Mikolas — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Luis Arraez Hit Prop</h3>
-    <p>Streaking with 0.476 AVG against Brandon Pfaadt.</p>
+    <h3>Bo Bichette knocks one?</h3>
+    <p>Riding a 16-game hit streak.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: baltimoreorioles vs philadelphiaphillies</h3>
-    <p>Low 1st-inning scoring profile with Jesus Luzardo and Cade Povich.</p>
+    <h3>NRFI: tampabayrays vs losangelesangels</h3>
+    <p>Low 1st-inning scoring profile with Jose Soriano and Ryan Pepiot.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">San Francisco Giants vs Pittsburgh Pirates — total runs over</span></h3>
-    <p><span class="blurred">nan% model chance of a high-scoring affair at PNC Park.</span></p>
+    <h3><span class="blurred">Baltimore Orioles vs Philadelphia Phillies — total runs over</span></h3>
+    <p><span class="blurred">Citizens Bank Park is a run-friendly park — 49.0% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
