🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Nathan Eovaldi racks up Ks today</h3>
-    <p>Nathan Eovaldi is in a prime strikeout spot today.</p>
+    <h3>Jack Flaherty over 6.6 Ks</h3>
+    <p>Jack Flaherty faces Twins, who strike out 22.2% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Mookie Betts HR prop</h3>
-    <p>33.3% hard-hit rate vs Miles Mikolas — eyes on the fences.</p>
+    <h3>Matt Olson HR prop</h3>
+    <p>83.3% hard-hit rate vs Jose Quintana — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Bo Bichette knocks one?</h3>
-    <p>Riding a 16-game hit streak.</p>
+    <h3>Bo Bichette Hit Prop</h3>
+    <p>🔥 17 games and success vs Kyle Freeland — good combo.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: tampabayrays vs losangelesangels</h3>
-    <p>Low 1st-inning scoring profile with Jose Soriano and Ryan Pepiot.</p>
+    <h3>No Run 1st Inning — minnesotatwins vs detroittigers</h3>
+    <p>Low 1st-inning scoring profile with Jack Flaherty and Thomas Hatch.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Baltimore Orioles vs Philadelphia Phillies — total runs over</span></h3>
-    <p><span class="blurred">Citizens Bank Park is a run-friendly park — 49.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">Chicago White Sox vs Seattle Mariners — total runs over</span></h3>
+    <p><span class="blurred">T-Mobile Park is a run-friendly park — 96.0% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
