🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Jack Flaherty over 6.6 Ks</h3>
-    <p>Jack Flaherty faces Twins, who strike out 22.2% of the time.</p>
+    <h3>Paul Skenes is projected to whiff 7.5</h3>
+    <p>Paul Skenes faces Reds, who strike out 22.4% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Matt Olson HR prop</h3>
-    <p>83.3% hard-hit rate vs Jose Quintana — eyes on the fences.</p>
+    <h3>Luis Robert to hit a HR</h3>
+    <p>Power bat with 1 HRs and strong contact vs Logan Gilbert.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Bo Bichette Hit Prop</h3>
-    <p>🔥 17 games and success vs Kyle Freeland — good combo.</p>
+    <h3>Bo Bichette knocks one?</h3>
+    <p>18-game streak — bat is staying hot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — minnesotatwins vs detroittigers</h3>
-    <p>Low 1st-inning scoring profile with Jack Flaherty and Thomas Hatch.</p>
+    <h3>No Run 1st Inning — miamimarlins vs atlantabraves</h3>
+    <p>Two quick starters: Carlos Carrasco and Eury Perez.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Chicago White Sox vs Seattle Mariners — total runs over</span></h3>
-    <p><span class="blurred">T-Mobile Park is a run-friendly park — 96.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">Chicago White Sox@Seattle Mariners could explode offensively</span></h3>
+    <p><span class="blurred">All signs point to a shootout at T-Mobile Park (99.0%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
