--- a/nrfi.html
+++ b/nrfi.html
@@ -27,74 +27,217 @@ a:hover {text-decoration: underline;}
 </div>
 
 
-<h1 style='text-align:center;font-family:sans-serif;'>NRFI Predictions for 2025-08-07</h1>
+<h1 style='text-align:center;font-family:sans-serif;'>NRFI Predictions for 2025-08-08</h1>
 <style type="text/css">
-#T_16906_row0_col0, #T_16906_row0_col1, #T_16906_row0_col2, #T_16906_row0_col3, #T_16906_row0_col4, #T_16906_row0_col5, #T_16906_row0_col6 {
+#T_3e494_row0_col0, #T_3e494_row0_col1, #T_3e494_row0_col2, #T_3e494_row0_col3, #T_3e494_row0_col4, #T_3e494_row0_col5, #T_3e494_row0_col6 {
   background-color: rgba(0, 104, 55, 0.6);
 }
-#T_16906_row1_col0, #T_16906_row1_col1, #T_16906_row1_col2, #T_16906_row1_col3, #T_16906_row1_col4, #T_16906_row1_col5, #T_16906_row1_col6 {
-  background-color: rgba(183, 224, 117, 0.6);
+#T_3e494_row1_col0, #T_3e494_row1_col1, #T_3e494_row1_col2, #T_3e494_row1_col3, #T_3e494_row1_col4, #T_3e494_row1_col5, #T_3e494_row1_col6 {
+  background-color: rgba(18, 137, 72, 0.6);
 }
-#T_16906_row2_col0, #T_16906_row2_col1, #T_16906_row2_col2, #T_16906_row2_col3, #T_16906_row2_col4, #T_16906_row2_col5, #T_16906_row2_col6 {
-  background-color: rgba(253, 190, 111, 0.6);
+#T_3e494_row2_col0, #T_3e494_row2_col1, #T_3e494_row2_col2, #T_3e494_row2_col3, #T_3e494_row2_col4, #T_3e494_row2_col5, #T_3e494_row2_col6 {
+  background-color: rgba(57, 167, 87, 0.6);
 }
-#T_16906_row3_col0, #T_16906_row3_col1, #T_16906_row3_col2, #T_16906_row3_col3, #T_16906_row3_col4, #T_16906_row3_col5, #T_16906_row3_col6 {
+#T_3e494_row3_col0, #T_3e494_row3_col1, #T_3e494_row3_col2, #T_3e494_row3_col3, #T_3e494_row3_col4, #T_3e494_row3_col5, #T_3e494_row3_col6 {
+  background-color: rgba(109, 192, 99, 0.6);
+}
+#T_3e494_row4_col0, #T_3e494_row4_col1, #T_3e494_row4_col2, #T_3e494_row4_col3, #T_3e494_row4_col4, #T_3e494_row4_col5, #T_3e494_row4_col6 {
+  background-color: rgba(157, 213, 105, 0.6);
+}
+#T_3e494_row5_col0, #T_3e494_row5_col1, #T_3e494_row5_col2, #T_3e494_row5_col3, #T_3e494_row5_col4, #T_3e494_row5_col5, #T_3e494_row5_col6 {
+  background-color: rgba(195, 229, 124, 0.6);
+}
+#T_3e494_row6_col0, #T_3e494_row6_col1, #T_3e494_row6_col2, #T_3e494_row6_col3, #T_3e494_row6_col4, #T_3e494_row6_col5, #T_3e494_row6_col6 {
+  background-color: rgba(227, 243, 153, 0.6);
+}
+#T_3e494_row7_col0, #T_3e494_row7_col1, #T_3e494_row7_col2, #T_3e494_row7_col3, #T_3e494_row7_col4, #T_3e494_row7_col5, #T_3e494_row7_col6 {
+  background-color: rgba(254, 254, 189, 0.6);
+}
+#T_3e494_row8_col0, #T_3e494_row8_col1, #T_3e494_row8_col2, #T_3e494_row8_col3, #T_3e494_row8_col4, #T_3e494_row8_col5, #T_3e494_row8_col6 {
+  background-color: rgba(254, 232, 153, 0.6);
+}
+#T_3e494_row9_col0, #T_3e494_row9_col1, #T_3e494_row9_col2, #T_3e494_row9_col3, #T_3e494_row9_col4, #T_3e494_row9_col5, #T_3e494_row9_col6 {
+  background-color: rgba(253, 202, 120, 0.6);
+}
+#T_3e494_row10_col0, #T_3e494_row10_col1, #T_3e494_row10_col2, #T_3e494_row10_col3, #T_3e494_row10_col4, #T_3e494_row10_col5, #T_3e494_row10_col6 {
+  background-color: rgba(251, 165, 92, 0.6);
+}
+#T_3e494_row11_col0, #T_3e494_row11_col1, #T_3e494_row11_col2, #T_3e494_row11_col3, #T_3e494_row11_col4, #T_3e494_row11_col5, #T_3e494_row11_col6 {
+  background-color: rgba(245, 116, 70, 0.6);
+}
+#T_3e494_row12_col0, #T_3e494_row12_col1, #T_3e494_row12_col2, #T_3e494_row12_col3, #T_3e494_row12_col4, #T_3e494_row12_col5, #T_3e494_row12_col6 {
+  background-color: rgba(226, 73, 50, 0.6);
+}
+#T_3e494_row13_col0, #T_3e494_row13_col1, #T_3e494_row13_col2, #T_3e494_row13_col3, #T_3e494_row13_col4, #T_3e494_row13_col5, #T_3e494_row13_col6 {
+  background-color: rgba(200, 33, 38, 0.6);
+}
+#T_3e494_row14_col0, #T_3e494_row14_col1, #T_3e494_row14_col2, #T_3e494_row14_col3, #T_3e494_row14_col4, #T_3e494_row14_col5, #T_3e494_row14_col6 {
   background-color: rgba(165, 0, 38, 0.6);
 }
 </style>
-<table id="T_16906">
+<table id="T_3e494">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
-      <th id="T_16906_level0_col0" class="col_heading level0 col0" >Game Time</th>
-      <th id="T_16906_level0_col1" class="col_heading level0 col1" >Matchup</th>
-      <th id="T_16906_level0_col2" class="col_heading level0 col2" >Home Pitcher</th>
-      <th id="T_16906_level0_col3" class="col_heading level0 col3" >Away Pitcher</th>
-      <th id="T_16906_level0_col4" class="col_heading level0 col4" >Top Half NRFI (%)</th>
-      <th id="T_16906_level0_col5" class="col_heading level0 col5" >Bottom Half NRFI (%)</th>
-      <th id="T_16906_level0_col6" class="col_heading level0 col6" >Final NRFI Probability (%)</th>
+      <th id="T_3e494_level0_col0" class="col_heading level0 col0" >Game Time</th>
+      <th id="T_3e494_level0_col1" class="col_heading level0 col1" >Matchup</th>
+      <th id="T_3e494_level0_col2" class="col_heading level0 col2" >Home Pitcher</th>
+      <th id="T_3e494_level0_col3" class="col_heading level0 col3" >Away Pitcher</th>
+      <th id="T_3e494_level0_col4" class="col_heading level0 col4" >Top Half NRFI (%)</th>
+      <th id="T_3e494_level0_col5" class="col_heading level0 col5" >Bottom Half NRFI (%)</th>
+      <th id="T_3e494_level0_col6" class="col_heading level0 col6" >Final NRFI Probability (%)</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th id="T_16906_level0_row0" class="row_heading level0 row0" >0</th>
-      <td id="T_16906_row0_col0" class="data row0 col0" >None</td>
-      <td id="T_16906_row0_col1" class="data row0 col1" >oaklandathletics vs washingtonnationals</td>
-      <td id="T_16906_row0_col2" class="data row0 col2" >Mitchell Parker</td>
-      <td id="T_16906_row0_col3" class="data row0 col3" >Jacob Lopez</td>
-      <td id="T_16906_row0_col4" class="data row0 col4" >5.300000</td>
-      <td id="T_16906_row0_col5" class="data row0 col5" >5.100000</td>
-      <td id="T_16906_row0_col6" class="data row0 col6" >0.300000</td>
+      <th id="T_3e494_level0_row0" class="row_heading level0 row0" >13</th>
+      <td id="T_3e494_row0_col0" class="data row0 col0" >None</td>
+      <td id="T_3e494_row0_col1" class="data row0 col1" >torontobluejays vs losangelesdodgers</td>
+      <td id="T_3e494_row0_col2" class="data row0 col2" >Clayton Kershaw</td>
+      <td id="T_3e494_row0_col3" class="data row0 col3" >Max Scherzer</td>
+      <td id="T_3e494_row0_col4" class="data row0 col4" >6.200000</td>
+      <td id="T_3e494_row0_col5" class="data row0 col5" >2.400000</td>
+      <td id="T_3e494_row0_col6" class="data row0 col6" >0.100000</td>
     </tr>
     <tr>
-      <th id="T_16906_level0_row1" class="row_heading level0 row1" >1</th>
-      <td id="T_16906_row1_col0" class="data row1 col0" >None</td>
-      <td id="T_16906_row1_col1" class="data row1 col1" >chicagowhitesox vs seattlemariners</td>
-      <td id="T_16906_row1_col2" class="data row1 col2" >Logan Gilbert</td>
-      <td id="T_16906_row1_col3" class="data row1 col3" >Shane Smith</td>
-      <td id="T_16906_row1_col4" class="data row1 col4" >4.800000</td>
-      <td id="T_16906_row1_col5" class="data row1 col5" >8.600000</td>
-      <td id="T_16906_row1_col6" class="data row1 col6" >0.400000</td>
+      <th id="T_3e494_level0_row1" class="row_heading level0 row1" >14</th>
+      <td id="T_3e494_row1_col0" class="data row1 col0" >None</td>
+      <td id="T_3e494_row1_col1" class="data row1 col1" >washingtonnationals vs sanfranciscogiants</td>
+      <td id="T_3e494_row1_col2" class="data row1 col2" >Kai-Wei Teng</td>
+      <td id="T_3e494_row1_col3" class="data row1 col3" >Jake Irvin</td>
+      <td id="T_3e494_row1_col4" class="data row1 col4" >4.400000</td>
+      <td id="T_3e494_row1_col5" class="data row1 col5" >3.300000</td>
+      <td id="T_3e494_row1_col6" class="data row1 col6" >0.100000</td>
     </tr>
     <tr>
-      <th id="T_16906_level0_row2" class="row_heading level0 row2" >2</th>
-      <td id="T_16906_row2_col0" class="data row2 col0" >None</td>
-      <td id="T_16906_row2_col1" class="data row2 col1" >cincinnatireds vs pittsburghpirates</td>
-      <td id="T_16906_row2_col2" class="data row2 col2" >Paul Skenes</td>
-      <td id="T_16906_row2_col3" class="data row2 col3" >Brady Singer</td>
-      <td id="T_16906_row2_col4" class="data row2 col4" >6.200000</td>
-      <td id="T_16906_row2_col5" class="data row2 col5" >8.400000</td>
-      <td id="T_16906_row2_col6" class="data row2 col6" >0.500000</td>
+      <th id="T_3e494_level0_row2" class="row_heading level0 row2" >9</th>
+      <td id="T_3e494_row2_col0" class="data row2 col0" >None</td>
+      <td id="T_3e494_row2_col1" class="data row2 col1" >chicagocubs vs st.louiscardinals</td>
+      <td id="T_3e494_row2_col2" class="data row2 col2" >Michael McGreevy</td>
+      <td id="T_3e494_row2_col3" class="data row2 col3" >Matthew Boyd</td>
+      <td id="T_3e494_row2_col4" class="data row2 col4" >7.000000</td>
+      <td id="T_3e494_row2_col5" class="data row2 col5" >1.800000</td>
+      <td id="T_3e494_row2_col6" class="data row2 col6" >0.100000</td>
     </tr>
     <tr>
-      <th id="T_16906_level0_row3" class="row_heading level0 row3" >3</th>
-      <td id="T_16906_row3_col0" class="data row3 col0" >None</td>
-      <td id="T_16906_row3_col1" class="data row3 col1" >miamimarlins vs atlantabraves</td>
-      <td id="T_16906_row3_col2" class="data row3 col2" >Carlos Carrasco</td>
-      <td id="T_16906_row3_col3" class="data row3 col3" >Eury Perez</td>
-      <td id="T_16906_row3_col4" class="data row3 col4" >57.600000</td>
-      <td id="T_16906_row3_col5" class="data row3 col5" >5.300000</td>
-      <td id="T_16906_row3_col6" class="data row3 col6" >3.100000</td>
+      <th id="T_3e494_level0_row3" class="row_heading level0 row3" >1</th>
+      <td id="T_3e494_row3_col0" class="data row3 col0" >None</td>
+      <td id="T_3e494_row3_col1" class="data row3 col1" >oaklandathletics vs baltimoreorioles</td>
+      <td id="T_3e494_row3_col2" class="data row3 col2" >Tomoyuki Sugano</td>
+      <td id="T_3e494_row3_col3" class="data row3 col3" >J.T. Ginn</td>
+      <td id="T_3e494_row3_col4" class="data row3 col4" >5.700000</td>
+      <td id="T_3e494_row3_col5" class="data row3 col5" >4.000000</td>
+      <td id="T_3e494_row3_col6" class="data row3 col6" >0.200000</td>
+    </tr>
+    <tr>
+      <th id="T_3e494_level0_row4" class="row_heading level0 row4" >10</th>
+      <td id="T_3e494_row4_col0" class="data row4 col0" >None</td>
+      <td id="T_3e494_row4_col1" class="data row4 col1" >coloradorockies vs arizonadiamondbacks</td>
+      <td id="T_3e494_row4_col2" class="data row4 col2" >Zac Gallen</td>
+      <td id="T_3e494_row4_col3" class="data row4 col3" >Austin Gomber</td>
+      <td id="T_3e494_row4_col4" class="data row4 col4" >3.900000</td>
+      <td id="T_3e494_row4_col5" class="data row4 col5" >5.000000</td>
+      <td id="T_3e494_row4_col6" class="data row4 col6" >0.200000</td>
+    </tr>
+    <tr>
+      <th id="T_3e494_level0_row5" class="row_heading level0 row5" >4</th>
+      <td id="T_3e494_row5_col0" class="data row5 col0" >None</td>
+      <td id="T_3e494_row5_col1" class="data row5 col1" >miamimarlins vs atlantabraves</td>
+      <td id="T_3e494_row5_col2" class="data row5 col2" >Bryce Elder</td>
+      <td id="T_3e494_row5_col3" class="data row5 col3" >Edward Cabrera</td>
+      <td id="T_3e494_row5_col4" class="data row5 col4" >6.400000</td>
+      <td id="T_3e494_row5_col5" class="data row5 col5" >3.600000</td>
+      <td id="T_3e494_row5_col6" class="data row5 col6" >0.200000</td>
+    </tr>
+    <tr>
+      <th id="T_3e494_level0_row6" class="row_heading level0 row6" >3</th>
+      <td id="T_3e494_row6_col0" class="data row6 col0" >None</td>
+      <td id="T_3e494_row6_col1" class="data row6 col1" >losangelesangels vs detroittigers</td>
+      <td id="T_3e494_row6_col2" class="data row6 col2" >Tarik Skubal</td>
+      <td id="T_3e494_row6_col3" class="data row6 col3" >Kyle Hendricks</td>
+      <td id="T_3e494_row6_col4" class="data row6 col4" >5.100000</td>
+      <td id="T_3e494_row6_col5" class="data row6 col5" >5.100000</td>
+      <td id="T_3e494_row6_col6" class="data row6 col6" >0.300000</td>
+    </tr>
+    <tr>
+      <th id="T_3e494_level0_row7" class="row_heading level0 row7" >12</th>
+      <td id="T_3e494_row7_col0" class="data row7 col0" >None</td>
+      <td id="T_3e494_row7_col1" class="data row7 col1" >tampabayrays vs seattlemariners</td>
+      <td id="T_3e494_row7_col2" class="data row7 col2" >Luis Castillo</td>
+      <td id="T_3e494_row7_col3" class="data row7 col3" >Drew Rasmussen</td>
+      <td id="T_3e494_row7_col4" class="data row7 col4" >5.900000</td>
+      <td id="T_3e494_row7_col5" class="data row7 col5" >5.400000</td>
+      <td id="T_3e494_row7_col6" class="data row7 col6" >0.300000</td>
+    </tr>
+    <tr>
+      <th id="T_3e494_level0_row8" class="row_heading level0 row8" >11</th>
+      <td id="T_3e494_row8_col0" class="data row8 col0" >None</td>
+      <td id="T_3e494_row8_col1" class="data row8 col1" >bostonredsox vs sandiegopadres</td>
+      <td id="T_3e494_row8_col2" class="data row8 col2" >Nick Pivetta</td>
+      <td id="T_3e494_row8_col3" class="data row8 col3" >Walker Buehler</td>
+      <td id="T_3e494_row8_col4" class="data row8 col4" >4.000000</td>
+      <td id="T_3e494_row8_col5" class="data row8 col5" >6.600000</td>
+      <td id="T_3e494_row8_col6" class="data row8 col6" >0.300000</td>
+    </tr>
+    <tr>
+      <th id="T_3e494_level0_row9" class="row_heading level0 row9" >5</th>
+      <td id="T_3e494_row9_col0" class="data row9 col0" >None</td>
+      <td id="T_3e494_row9_col1" class="data row9 col1" >clevelandguardians vs chicagowhitesox</td>
+      <td id="T_3e494_row9_col2" class="data row9 col2" >Aaron Civale</td>
+      <td id="T_3e494_row9_col3" class="data row9 col3" >Tanner Bibee</td>
+      <td id="T_3e494_row9_col4" class="data row9 col4" >6.000000</td>
+      <td id="T_3e494_row9_col5" class="data row9 col5" >6.800000</td>
+      <td id="T_3e494_row9_col6" class="data row9 col6" >0.400000</td>
+    </tr>
+    <tr>
+      <th id="T_3e494_level0_row10" class="row_heading level0 row10" >8</th>
+      <td id="T_3e494_row10_col0" class="data row10 col0" >None</td>
+      <td id="T_3e494_row10_col1" class="data row10 col1" >newyorkmets vs milwaukeebrewers</td>
+      <td id="T_3e494_row10_col2" class="data row10 col2" >Brandon Woodruff</td>
+      <td id="T_3e494_row10_col3" class="data row10 col3" >Kodai Senga</td>
+      <td id="T_3e494_row10_col4" class="data row10 col4" >4.900000</td>
+      <td id="T_3e494_row10_col5" class="data row10 col5" >7.300000</td>
+      <td id="T_3e494_row10_col6" class="data row10 col6" >0.400000</td>
+    </tr>
+    <tr>
+      <th id="T_3e494_level0_row11" class="row_heading level0 row11" >7</th>
+      <td id="T_3e494_row11_col0" class="data row11 col0" >None</td>
+      <td id="T_3e494_row11_col1" class="data row11 col1" >kansascityroyals vs minnesotatwins</td>
+      <td id="T_3e494_row11_col2" class="data row11 col2" >Joe Ryan</td>
+      <td id="T_3e494_row11_col3" class="data row11 col3" >Seth Lugo</td>
+      <td id="T_3e494_row11_col4" class="data row11 col4" >4.800000</td>
+      <td id="T_3e494_row11_col5" class="data row11 col5" >8.500000</td>
+      <td id="T_3e494_row11_col6" class="data row11 col6" >0.400000</td>
+    </tr>
+    <tr>
+      <th id="T_3e494_level0_row12" class="row_heading level0 row12" >0</th>
+      <td id="T_3e494_row12_col0" class="data row12 col0" >None</td>
+      <td id="T_3e494_row12_col1" class="data row12 col1" >cincinnatireds vs pittsburghpirates</td>
+      <td id="T_3e494_row12_col2" class="data row12 col2" >Mitch Keller</td>
+      <td id="T_3e494_row12_col3" class="data row12 col3" >Chase Burns</td>
+      <td id="T_3e494_row12_col4" class="data row12 col4" >8.800000</td>
+      <td id="T_3e494_row12_col5" class="data row12 col5" >6.100000</td>
+      <td id="T_3e494_row12_col6" class="data row12 col6" >0.500000</td>
+    </tr>
+    <tr>
+      <th id="T_3e494_level0_row13" class="row_heading level0 row13" >2</th>
+      <td id="T_3e494_row13_col0" class="data row13 col0" >None</td>
+      <td id="T_3e494_row13_col1" class="data row13 col1" >houstonastros vs newyorkyankees</td>
+      <td id="T_3e494_row13_col2" class="data row13 col2" >Cam Schlittler</td>
+      <td id="T_3e494_row13_col3" class="data row13 col3" >Hunter Brown</td>
+      <td id="T_3e494_row13_col4" class="data row13 col4" >6.600000</td>
+      <td id="T_3e494_row13_col5" class="data row13 col5" >7.100000</td>
+      <td id="T_3e494_row13_col6" class="data row13 col6" >0.500000</td>
+    </tr>
+    <tr>
+      <th id="T_3e494_level0_row14" class="row_heading level0 row14" >6</th>
+      <td id="T_3e494_row14_col0" class="data row14 col0" >None</td>
+      <td id="T_3e494_row14_col1" class="data row14 col1" >philadelphiaphillies vs texasrangers</td>
+      <td id="T_3e494_row14_col2" class="data row14 col2" >Merrill Kelly</td>
+      <td id="T_3e494_row14_col3" class="data row14 col3" >Cristopher Sanchez</td>
+      <td id="T_3e494_row14_col4" class="data row14 col4" >60.600000</td>
+      <td id="T_3e494_row14_col5" class="data row14 col5" >5.400000</td>
+      <td id="T_3e494_row14_col6" class="data row14 col6" >3.300000</td>
     </tr>
   </tbody>
 </table>
