--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Paul Skenes is projected to whiff 7.5</h3>
-    <p>Paul Skenes faces Reds, who strike out 22.4% of the time.</p>
+    <h3>Tarik Skubal over 9.8 Ks</h3>
+    <p>Great K% matchup vs Angels — projected for 9.8 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Luis Robert to hit a HR</h3>
-    <p>Power bat with 1 HRs and strong contact vs Logan Gilbert.</p>
+    <h3>Fernando Tatis Jr. to hit a HR</h3>
+    <p>Fernando Tatis Jr. has hit 2 already and owns a 75.0% hard-hit rate vs Walker Buehler.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Bo Bichette knocks one?</h3>
-    <p>18-game streak — bat is staying hot.</p>
+    <h3>Randy Arozarena Hit Prop</h3>
+    <p>Batting 1.0 vs Drew Rasmussen — strong contact spot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — miamimarlins vs atlantabraves</h3>
-    <p>Two quick starters: Carlos Carrasco and Eury Perez.</p>
+    <h3>No Run 1st Inning — philadelphiaphillies vs texasrangers</h3>
+    <p>Low 1st-inning scoring profile with Merrill Kelly and Cristopher Sanchez.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Chicago White Sox@Seattle Mariners could explode offensively</span></h3>
-    <p><span class="blurred">All signs point to a shootout at T-Mobile Park (99.0%).</span></p>
+    <h3><span class="blurred">Tampa Bay Rays@Seattle Mariners could explode offensively</span></h3>
+    <p><span class="blurred">T-Mobile Park is a run-friendly park — 32.0% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
