--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Tarik Skubal over 9.8 Ks</h3>
-    <p>Great K% matchup vs Angels — projected for 9.8 strikeouts.</p>
+    <h3>Jacob deGrom racks up Ks today</h3>
+    <p>Great K% matchup vs Phillies — projected for 6.3 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Fernando Tatis Jr. to hit a HR</h3>
-    <p>Fernando Tatis Jr. has hit 2 already and owns a 75.0% hard-hit rate vs Walker Buehler.</p>
+    <h3>Salvador Perez has HR potential</h3>
+    <p>57.1% hard-hit rate vs Bailey Ober — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Randy Arozarena Hit Prop</h3>
-    <p>Batting 1.0 vs Drew Rasmussen — strong contact spot.</p>
+    <h3>Michael Busch to record a hit</h3>
+    <p>High-contact profile vs today's pitcher Andre Pallante.</p>
 </div>
 
 <div class="prop-card">
     <h3>No Run 1st Inning — philadelphiaphillies vs texasrangers</h3>
-    <p>Low 1st-inning scoring profile with Merrill Kelly and Cristopher Sanchez.</p>
+    <p>Two quick starters: Jacob deGrom and Jesus Luzardo.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Tampa Bay Rays@Seattle Mariners could explode offensively</span></h3>
-    <p><span class="blurred">T-Mobile Park is a run-friendly park — 32.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">Miami Marlins vs Atlanta Braves — total runs over</span></h3>
+    <p><span class="blurred">All signs point to a shootout at Truist Park (nan%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
