🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Jacob deGrom racks up Ks today</h3>
-    <p>Great K% matchup vs Phillies — projected for 6.3 strikeouts.</p>
+    <h3>Zack Wheeler racks up Ks today</h3>
+    <p>Zack Wheeler is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Salvador Perez has HR potential</h3>
-    <p>57.1% hard-hit rate vs Bailey Ober — eyes on the fences.</p>
+    <h3>Brent Rooker has HR potential</h3>
+    <p>Power bat with 1 HRs and strong contact vs Cade Povich.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Michael Busch to record a hit</h3>
-    <p>High-contact profile vs today's pitcher Andre Pallante.</p>
+    <h3>Dominic Smith knocks one?</h3>
+    <p>Riding a 13-game hit streak.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — philadelphiaphillies vs texasrangers</h3>
-    <p>Two quick starters: Jacob deGrom and Jesus Luzardo.</p>
+    <h3>No Run 1st Inning — kansascityroyals vs minnesotatwins</h3>
+    <p>Low 1st-inning scoring profile with Jose Urena and Ryan Bergert.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Miami Marlins vs Atlanta Braves — total runs over</span></h3>
-    <p><span class="blurred">All signs point to a shootout at Truist Park (nan%).</span></p>
+    <h3><span class="blurred">Tampa Bay Rays vs Seattle Mariners run fest?</span></h3>
+    <p><span class="blurred">All signs point to a shootout at T-Mobile Park (30.0%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
